--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,6 +12,7 @@
     // "paths": {                     /* Optional: For absolute imports like '@/module' */
     //   "@/*": ["./src/*"]
     // }
+    "typeRoots": ["./node_modules/@types", "./src/@types"]
   },
   "include": [
     "src/**/*.ts",    /* Include all TypeScript files in src and its subdirectories. */
