--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "main": "dist/server.js",
+  "ts-node": {
+    "files": true
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon --exec ts-node --files src/server.ts",
     "lint": "eslint \"{src/**/*.ts,*.js}\" --fix",
     "format": "prettier --write \"{src/**/*.ts,*.js}\"",
     "prisma:generate": "npx prisma generate",
