--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@langchain/google-genai": "^0.2.13",
     "@prisma/client": "^6.10.1",
     "axios": "^1.10.0",
+    "bson": "^6.10.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -35,7 +36,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/multer": "^1.4.13",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.7",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9.29.0",
