--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.61",
     "@langchain/google-genai": "^0.2.13",
     "@prisma/client": "^6.10.1",
@@ -29,7 +30,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-list-endpoints": "^7.1.1",
-    "multer": "^2.0.1"
+    "multer": "^2.0.1",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
