--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,26 +1,28 @@
 {
   "compilerOptions": {
-    "target": "es2020",             /* Specify ECMAScript target version. */
-    "module": "commonjs",           /* Specify module code generation. */
-    "outDir": "./dist",             /* Redirect output structure to the directory. */
-    "rootDir": "./src",             /* Specify the root directory of input files. */
-    "strict": true,                 /* Enable all strict type-checking options. */
-    "esModuleInterop": true,        /* Enables emit interoperability between CommonJS and ES Modules. */
-    "skipLibCheck": true,           /* Skip type checking of declaration files. IMPORTANT for node_modules/@types. */
-    "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references. */
-    "baseUrl": ".",                 /* This is important for module resolution, especially with 'paths'. */
-    "paths": {                     /* Optional: For absolute imports like '@/module' */
-      "@/*": ["./src/*"]
+    "target": "es2020",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
     },
-    "typeRoots": ["./node_modules/@types", "./src/@types"]
+    "typeRoots": ["node_modules/@types", "src/@types"],
+    "types": ["node"]
   },
   "include": [
-    "src/**/*.ts",    /* Include all TypeScript files in src and its subdirectories. */
-    "src/**/*.d.ts",  /* Explicitly include all declaration files (like express.d.ts). */
-    "eslint.config.js" /* Include the ESLint config file itself, as it's a JS file that TS needs to see. */
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "eslint.config.js"
   ],
   "exclude": [
-    "node_modules",   /* Exclude Node.js modules. */
-    "dist"            /* Exclude compiled output directory. */
+    "node_modules",
+    "dist"
   ]
 }
