added icon, and the server processing working

--- a/client/.env
+++ b/client/.env
@@ -5,3 +5,4 @@ VITE_AUTH0_DOMAIN=dev-aj1lgrevxirr83n6.us.auth0.com
 VITE_AUTH0_CLIENT_ID=PvpPxNNoBomtWkbUsRa1XzOAgLAXeySX
 VITE_AUTH0_REDIRECT_URI=http://localhost:5173
 VITE_AUTH0_AUDIENCE=https://api.nutricheck.com
+VITE_API_URL=http://localhost:3000/api
