--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
-#VITE_API_URL=http://localhost:4000/api
-VITE_API_URL=http://127.0.0.1:4000/api
+VITE_API_URL=http://localhost:4000/api
+#VITE_API_URL=http://127.0.0.1:4000/api
 VITE_GOOGLE_CLIENT_ID=940467510825-n5tjrskt1r8ec961s2hd2i0gg9mv0ld8.apps.googleusercontent.com
 VITE_REDIRECT_URI=http://localhost:5173/callback
 VITE_BACKEND_BASE_URL=http://localhost:3000
