--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.61",
     "@langchain/google-genai": "^0.2.13",
@@ -29,10 +30,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-list-endpoints": "^7.1.1",
-    "multer": "^2.0.1",
     "express-jwt": "^7.7.5",
+    "express-list-endpoints": "^7.1.1",
     "jwks-rsa": "^3.0.2",
+    "multer": "^2.0.1",
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "nodemon": "^3.1.10",
     "prettier": "^3.6.0",
     "prisma": "^6.10.1",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1"
